--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=8080
 #  mango atlas pass : Y2ApRspXtH16u71K
-MONGO_CONN=mongodb+srv://maheshnadendla147:Y2ApRspXtH16u71K@cluster0.hdeuv.mongodb.net/inout
+# MONGO_CONN=mongodb+srv://maheshnadendla147:Y2ApRspXtH16u71K@cluster0.hdeuv.mongodb.net/inout
+MONGO_CONN=mongodb://localhost:27017/inout
